[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 27 )

[sub_resource type="Animation" id=2]
resource_name = "dash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 2, -2 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("arm_r:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 0 ), Vector2( -5, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("arm_l:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ), Vector2( 5, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -3, 3 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("head:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, 2 ),
"update": 0,
"values": [ Vector2( 0, -9 ), Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -9 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("arm_l:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ), Vector2( 5, -0.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("arm_r:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 0 ), Vector2( -5, -0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("legs:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "dash"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=14]
states/dash/node = SubResource( 5 )
states/dash/position = Vector2( 351, 237 )
states/idle/node = SubResource( 6 )
states/idle/position = Vector2( 170, 106 )
states/movement/node = SubResource( 7 )
states/movement/position = Vector2( 351, 106 )
transitions = [ "idle", "movement", SubResource( 8 ), "movement", "idle", SubResource( 9 ), "idle", "dash", SubResource( 10 ), "movement", "dash", SubResource( 11 ), "dash", "idle", SubResource( 12 ), "dash", "movement", SubResource( 13 ) ]
start_node = "idle"
graph_offset = Vector2( -121, 54 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="sprite" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="legs" type="Sprite" parent="sprite"]
position = Vector2( 0, 5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 3, 29, 8, 2 )

[node name="arm_r" type="Sprite" parent="sprite"]
position = Vector2( -5, 0.330775 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 22, 3, 6 )

[node name="body" type="Sprite" parent="sprite"]
position = Vector2( 0, 0.700279 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 12, 10, 9 )

[node name="arm_l" type="Sprite" parent="sprite"]
position = Vector2( 5, 0.330775 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 22, 3, 6 )

[node name="head" type="Sprite" parent="sprite"]
position = Vector2( 0, -8.44786 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 1, 10, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../sprite")
anims/dash = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/movement = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 15 )

[node name="dashTimer" type="Timer" parent="."]

[node name="dashCooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="dashTimer" to="." method="_on_dashTimer_timeout"]
[connection signal="timeout" from="dashCooldownTimer" to="." method="_on_dashCooldownTimer_timeout"]
